export const snapshot = {};

snapshot[`jsx - simple case 1`] = `
[
  [
    11,
    "div",
  ],
  [
    12,
    "div",
  ],
]
`;

snapshot[`jsx - props 1`] = `
[
  [
    11,
    "div",
  ],
  [
    13,
    "style",
  ],
  [
    9,
    {
      color: "red",
    },
  ],
  [
    13,
    "id",
  ],
  [
    5,
    "my-cool-div",
  ],
  [
    12,
    "div",
  ],
]
`;

snapshot[`jsx - children 1`] = `
[
  [
    11,
    "ul",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    11,
    "li",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #1",
  ],
  [
    12,
    "li",
  ],
  [
    11,
    "li",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #2",
  ],
  [
    12,
    "li",
  ],
  [
    11,
    "li",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #3",
  ],
  [
    12,
    "li",
  ],
  [
    12,
    "ul",
  ],
]
`;

snapshot[`jsx - mapped children 1`] = `
[
  [
    11,
    "ul",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    11,
    "li",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #1",
  ],
  [
    12,
    "li",
  ],
  [
    11,
    "li",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #2",
  ],
  [
    12,
    "li",
  ],
  [
    11,
    "li",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #3",
  ],
  [
    12,
    "li",
  ],
  [
    12,
    "ul",
  ],
]
`;

snapshot[`jsx - children + props 1`] = `
[
  [
    11,
    "ul",
  ],
  [
    13,
    "id",
  ],
  [
    5,
    "main",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    11,
    "li",
  ],
  [
    13,
    "class",
  ],
  [
    5,
    "selected",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #1",
  ],
  [
    12,
    "li",
  ],
  [
    11,
    "li",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #2",
  ],
  [
    12,
    "li",
  ],
  [
    11,
    "li",
  ],
  [
    13,
    "disabled",
  ],
  [
    4,
    true,
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #3",
  ],
  [
    12,
    "li",
  ],
  [
    12,
    "ul",
  ],
]
`;

snapshot[`jsx - nested children 1`] = `
[
  [
    11,
    "div",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    11,
    "div",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    11,
    "div",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    11,
    "div",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    11,
    "div",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Hello, World!",
  ],
  [
    12,
    "div",
  ],
  [
    12,
    "div",
  ],
  [
    12,
    "div",
  ],
  [
    12,
    "div",
  ],
  [
    12,
    "div",
  ],
]
`;

snapshot[`jsx - nested children + props 1`] = `
[
  [
    11,
    "div",
  ],
  [
    13,
    "id",
  ],
  [
    5,
    "1",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    11,
    "div",
  ],
  [
    13,
    "id",
  ],
  [
    5,
    "2",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    11,
    "div",
  ],
  [
    13,
    "id",
  ],
  [
    5,
    "3",
  ],
  [
    13,
    "onClick",
  ],
  [
    10,
    [Function: onClick],
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    11,
    "div",
  ],
  [
    13,
    "id",
  ],
  [
    5,
    "4",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    11,
    "div",
  ],
  [
    13,
    "id",
  ],
  [
    5,
    "5",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Hello, World!",
  ],
  [
    12,
    "div",
  ],
  [
    12,
    "div",
  ],
  [
    12,
    "div",
  ],
  [
    12,
    "div",
  ],
  [
    12,
    "div",
  ],
]
`;

snapshot[`jsx - fragment 1`] = `
[
  [
    11,
    "[[FRAGMENT]]",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    11,
    "span",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Hello #1",
  ],
  [
    12,
    "span",
  ],
  [
    11,
    "span",
  ],
  [
    13,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Hello #2",
  ],
  [
    12,
    "span",
  ],
  [
    12,
    "[[FRAGMENT]]",
  ],
]
`;
